--- a/controller/setup/phpgw_no.lang
+++ b/controller/setup/phpgw_no.lang
@@ -241,3 +241,5 @@ NEW	controller	no	Ny
 PENDING	controller	no	Venter
 ACCEPTED	controller	no	Akseptert
 REJECTED	controller	no	Avvist
+New control group	controller	no	Ny kontrollgruppe
+Control group title	controller	no	Tittel
